<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.hepengju</groupId>
	<artifactId>java-new-features</artifactId>
	<version>0.1</version>

	<name>Java新特性</name>
	<description>Java新特性代码展示 - 5,6,7,8,9,10,11,12,13</description>

	<!-- 描述信息和开发人员信息 -->
	<developers>
		<developer>
			<name>何鹏举</name>
			<email>he_pengju@163.com</email>
		</developer>
		<developer>
			<name>王国荣</name>
		</developer>
		<developer>
			<name>陈楠</name>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<!-- 数据库驱动 -->
		<!--
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.47</version>
		</dependency>
		-->
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>8.0.18</version>
			<scope>runtime</scope>
		</dependency>

		<!-- JUnit测试 : 5版本的设计思想与用法变化比较大,暂时还是使用4版本的 -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.2.3</version>
		</dependency>

		<!--WGR 测试用的O.9,举哥用的1.3，由于1.3没有那些类，当1.3放在上面时，并不会引用0.9的jar包 -->
		<dependency>
			<groupId>org.javamoney</groupId>
			<artifactId>moneta</artifactId>
			<version>0.9</version>
		</dependency>

		<!-- 钱和货币API -->
		<!-- 当1.3和0.9共存的时候，有import类的提示，但还是报错，先注释1.3，便没有问题 -->
		<!-- <dependency> <groupId>org.javamoney</groupId> <artifactId>moneta</artifactId> 
			<version>1.3</version> <type>pom</type> </dependency> -->

		<dependency>
			<groupId>commons-codec</groupId>
			<artifactId>commons-codec</artifactId>
			<version>1.11</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.10</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.10.19</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>1.6.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>1.6.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.diffblue</groupId>
			<artifactId>deeptestutils</artifactId>
			<version>1.9.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.jacoco</groupId>
			<artifactId>org.jacoco.agent</artifactId>
			<version>0.8.5</version>
			<scope>test</scope>
			<classifier>runtime</classifier>
		</dependency>
	</dependencies>



	<!-- 三.插件配置 -->
	<build>
		<plugins>
			<!-- 0.Maven编译插件: 保留参数名称 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<verbose>true</verbose>
          			<fork>true</fork>
					<source>11</source>
					<target>11</target>
					<compilerArgs>
						<arg>-parameters</arg>
						<arg>--enable-preview</arg>
						<!--
						<arg>-Xlint:deprecation</arg>
						<arg>-Xlint:unchecked</arg>
						<arg>-Xlint:preview</arg>
                        -->
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- 版本插件 -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<generateBackupPoms>false</generateBackupPoms>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<argLine>-Djacoco-agent.destfile=${project.build.directory}/jacoco.exec</argLine>
					<forkCount>0.5C</forkCount>
					<forkedProcessTimeoutInSeconds>600</forkedProcessTimeoutInSeconds>
					<reuseForks>false</reuseForks>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.1</version>
				<configuration>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
								<exclude>META-INF/*.SF</exclude>
							</excludes>
						</filter>
					</filters>
					<outputFile>target/${project.artifactId}-${project.version}-jar-with-dependencies.jar</outputFile>
				</configuration>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<executions>
					<execution>
						<id>instrument</id>
						<phase>process-test-classes</phase>
						<goals>
							<goal>instrument</goal>
						</goals>
					</execution>
					<execution>
						<id>restore-instrumented-classes</id>
						<phase>test</phase>
						<goals>
							<goal>restore-instrumented-classes</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>3.0.0</version>
				<reportSets>
					<reportSet/>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-report-plugin</artifactId>
				<version>3.0.0-M3</version>
				<configuration>
					<linkXRef>false</linkXRef>
					<showSuccess>false</showSuccess>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.5</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
</project>